// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builder should render the default markup 1`] = `
<div>
  <div class="container ddm-form-builder">
    <div class="sheet">
      <div class="position-relative">
        <div class="ddm-form-pagination position-absolute">
          <div class="ddm-page-settings" role="group">
            <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#ellipsis-v"></use>
                </svg></button></div>
          </div>
        </div>
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="ddm-form-page pl-4 pr-4"><textarea class="form-builder-page-header-title form-control p-0" data-page-index="0" maxlength="120" value="Untitled name"></textarea><textarea class="form-builder-page-header-description form-control p-0" data-page-index="0" maxlength="120" placeholder="add-a-short-description-for-this-page"></textarea>
            <div class="form-builder-layout">
              <div class="layout-page">
                <div class="ddm-resize-column" data-resize-column="0" ref="resizeColumn0"></div>
                <div class="ddm-resize-column" data-resize-column="1" ref="resizeColumn1"></div>
                <div class="ddm-resize-column" data-resize-column="2" ref="resizeColumn2"></div>
                <div class="ddm-resize-column" data-resize-column="3" ref="resizeColumn3"></div>
                <div class="ddm-resize-column" data-resize-column="4" ref="resizeColumn4"></div>
                <div class="ddm-resize-column" data-resize-column="5" ref="resizeColumn5"></div>
                <div class="ddm-resize-column" data-resize-column="6" ref="resizeColumn6"></div>
                <div class="ddm-resize-column" data-resize-column="7" ref="resizeColumn7"></div>
                <div class="ddm-resize-column" data-resize-column="8" ref="resizeColumn8"></div>
                <div class="ddm-resize-column" data-resize-column="9" ref="resizeColumn9"></div>
                <div class="ddm-resize-column" data-resize-column="10" ref="resizeColumn10"></div>
                <div class="ddm-resize-column" data-resize-column="11" ref="resizeColumn11"></div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="0" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                  <div class="col col-empty col-md-9" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="1">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="1" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                  <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                    </div>
                  </div>
                  <div class="col col-empty col-md-2" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="2" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="3" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="4" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="fade modal" role="dialog" tabindex="-1">
        <div class="modal-dialog modal-sm">
          <div class="modal-content">
            <div class="modal-header">
              <div class="modal-title">delete-field-dialog-title</div><button class="btn close btn-unstyled" aria-label="close" type="button"><svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg></button>
            </div>
            <div class="modal-body">are-you-sure-you-want-to-delete-this-field</div>
            <div class="modal-footer">
              <div class="modal-item-first">
                <div class="btn-group"></div>
              </div>
              <div class="modal-item-last">
                <div class="btn-group">
                  <div class="btn-group-item"><button class="btn close-modal btn-secondary" type="button">dismiss</button></div>
                  <div class="btn-group-item"><button class="btn btn-primary" type="button">delete</button></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="fade modal" role="dialog" tabindex="-1">
        <div class="modal-dialog modal-sm">
          <div class="modal-content">
            <div class="modal-header">
              <div class="modal-title">cancel-field-changes-question</div><button class="btn close btn-unstyled" aria-label="close" type="button"><svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg></button>
            </div>
            <div class="modal-body">are-you-sure-you-want-to-cancel</div>
            <div class="modal-footer">
              <div class="modal-item-first">
                <div class="btn-group"></div>
              </div>
              <div class="modal-item-last">
                <div class="btn-group">
                  <div class="btn-group-item"><button class="btn close-modal btn-secondary" type="button">dismiss</button></div>
                  <div class="btn-group-item"><button class="btn btn-primary" type="button">yes-cancel</button></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sidebar-container" ref="container">
    <div class="sidebar sidebar-light">
      <nav class="component-tbar tbar">
        <div class="container-fluid">
          <ul class="tbar-nav">
            <li class="tbar-item tbar-item-expand text-left">
              <div class="tbar-section"><span class="text-truncate-inline"><span class="text-truncate">add-elements</span></span></div>
            </li>
            <li class="tbar-item"><a class="component-action sidebar-close" href="#1" ref="closeButton" role="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <use xlink:href="icons.svg#times"></use>
                </svg></a></li>
          </ul>
        </div>
      </nav>
      <nav class="component-navigation-bar navbar navigation-bar navbar-collapse-absolute navbar-expand-md navbar-underline"><a aria-controls="sidebarLightCollapse00" aria-expanded="false" aria-label="Toggle Navigation" class="collapsed navbar-toggler navbar-toggler-link" data-toggle="collapse" href="#sidebarLightCollapse00" role="button"><span class="navbar-text-truncate">Details</span><svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
            <use xlink:href="icons.svg#caret-bottom"></use>
          </svg></a>
        <div class="collapse navbar-collapse" id="sidebarLightCollapse00">
          <ul class="nav navbar-nav" role="tablist">
            <li class="nav-item" data-index="0" ref="tab0"><a class="nav-link active" aria-controls="sidebarLightDetails" data-toggle="tab" href="javascript:;" role="tab"><span class="navbar-text-truncate">elements</span></a></li>
            <li class="nav-item" data-index="1" ref="tab1"><a class="nav-link" aria-controls="sidebarLightDetails" data-toggle="tab" href="javascript:;" role="tab"><span class="navbar-text-truncate">element-sets</span></a></li>
          </ul>
        </div>
      </nav>
      <div class="ddm-sidebar-body">
        <div aria-orientation="vertical" class="ddm-field-types-panel panel-group" id="accordion03" role="tablist">
          <div class="panel panel-secondary"><a href="#ddm-field-types-basic-body" id="ddm-field-types-basic-header" aria-controls="collapseTwo" aria-expanded="true" class="collapse-icon panel-header panel-header-link" data-parent="#accordion03" data-toggle="collapse" role="tab"><span class="panel-title">field-types-basic-elements</span><span class="collapse-icon-closed"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-right">
                  <use xlink:href="icons.svg#angle-right"></use>
                </svg></span><span class="collapse-icon-open"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down">
                  <use xlink:href="icons.svg#angle-down"></use>
                </svg></span></a>
            <div aria-labelledby="#ddm-field-types-basic-header" id="ddm-field-types-basic-body" class="panel-collapse show" role="tabpanel">
              <div class="panel-body p-0 m-0 list-group"></div>
            </div>
          </div>
          <div class="panel panel-secondary"><a href="#ddm-field-types-customized-body" id="ddm-field-types-customized-header" aria-controls="collapseTwo" aria-expanded="true" class="collapse-icon panel-header panel-header-link" data-parent="#accordion03" data-toggle="collapse" role="tab"><span class="panel-title">field-types-customized-elements</span><span class="collapse-icon-closed"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-right">
                  <use xlink:href="icons.svg#angle-right"></use>
                </svg></span><span class="collapse-icon-open"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down">
                  <use xlink:href="icons.svg#angle-down"></use>
                </svg></span></a>
            <div aria-labelledby="#ddm-field-types-customized-header" id="ddm-field-types-customized-body" class="panel-collapse show" role="tabpanel">
              <div class="panel-body p-0 m-0 list-group"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="add-new-page" type="button">add-new-page</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="add-success-page" type="button">add-success-page</button></li>
  </ul>
</div>
`;

exports[`Builder should show modal when fieldChangesCanceled event is trigered from sidebar 1`] = `
<div>
  <div class="container ddm-form-builder">
    <div class="sheet">
      <div class="position-relative">
        <div class="ddm-form-pagination position-absolute">
          <div class="ddm-page-settings" role="group">
            <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#ellipsis-v"></use>
                </svg></button></div>
          </div>
        </div>
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="ddm-form-page pl-4 pr-4"><textarea class="form-builder-page-header-title form-control p-0" data-page-index="0" maxlength="120" value="Untitled name" placeholder="untitled-page-x-of-x"></textarea><textarea class="form-builder-page-header-description form-control p-0" data-page-index="0" maxlength="120" placeholder="add-a-short-description-for-this-page"></textarea>
            <div class="form-builder-layout">
              <div class="layout-page">
                <div class="ddm-resize-column" data-resize-column="0" ref="resizeColumn0"></div>
                <div class="ddm-resize-column" data-resize-column="1" ref="resizeColumn1"></div>
                <div class="ddm-resize-column" data-resize-column="2" ref="resizeColumn2"></div>
                <div class="ddm-resize-column" data-resize-column="3" ref="resizeColumn3"></div>
                <div class="ddm-resize-column" data-resize-column="4" ref="resizeColumn4"></div>
                <div class="ddm-resize-column" data-resize-column="5" ref="resizeColumn5"></div>
                <div class="ddm-resize-column" data-resize-column="6" ref="resizeColumn6"></div>
                <div class="ddm-resize-column" data-resize-column="7" ref="resizeColumn7"></div>
                <div class="ddm-resize-column" data-resize-column="8" ref="resizeColumn8"></div>
                <div class="ddm-resize-column" data-resize-column="9" ref="resizeColumn9"></div>
                <div class="ddm-resize-column" data-resize-column="10" ref="resizeColumn10"></div>
                <div class="ddm-resize-column" data-resize-column="11" ref="resizeColumn11"></div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="0" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                  <div class="col col-empty col-md-9" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="1">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="1" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                  <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                    </div>
                  </div>
                  <div class="col col-empty col-md-2" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="2" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="3" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="4" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="fade modal" role="dialog" tabindex="-1">
        <div class="modal-dialog modal-sm">
          <div class="modal-content">
            <div class="modal-header">
              <div class="modal-title">delete-field-dialog-title</div><button class="btn close btn-unstyled" aria-label="close" type="button"><svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg></button>
            </div>
            <div class="modal-body">are-you-sure-you-want-to-delete-this-field</div>
            <div class="modal-footer">
              <div class="modal-item-first">
                <div class="btn-group"></div>
              </div>
              <div class="modal-item-last">
                <div class="btn-group">
                  <div class="btn-group-item"><button class="btn close-modal btn-secondary" type="button">dismiss</button></div>
                  <div class="btn-group-item"><button class="btn btn-primary" type="button">delete</button></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="fade modal d-block show" role="dialog" tabindex="-1">
        <div class="modal-dialog modal-sm">
          <div class="modal-content">
            <div class="modal-header">
              <div class="modal-title">cancel-field-changes-question</div><button class="btn close btn-unstyled" aria-label="close" type="button"><svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg></button>
            </div>
            <div class="modal-body">are-you-sure-you-want-to-cancel</div>
            <div class="modal-footer">
              <div class="modal-item-first">
                <div class="btn-group"></div>
              </div>
              <div class="modal-item-last">
                <div class="btn-group">
                  <div class="btn-group-item"><button class="btn close-modal btn-secondary" type="button">dismiss</button></div>
                  <div class="btn-group-item"><button class="btn btn-primary" type="button">yes-cancel</button></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sidebar-container" ref="container">
    <div class="sidebar sidebar-light">
      <nav class="component-tbar tbar">
        <div class="container-fluid">
          <ul class="tbar-nav">
            <li class="tbar-item tbar-item-expand text-left">
              <div class="tbar-section"><span class="text-truncate-inline"><span class="text-truncate">add-elements</span></span></div>
            </li>
            <li class="tbar-item"><a class="component-action sidebar-close" href="#1" ref="closeButton" role="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <use xlink:href="icons.svg#times"></use>
                </svg></a></li>
          </ul>
        </div>
      </nav>
      <nav class="component-navigation-bar navbar navigation-bar navbar-collapse-absolute navbar-expand-md navbar-underline"><a aria-controls="sidebarLightCollapse00" aria-expanded="false" aria-label="Toggle Navigation" class="collapsed navbar-toggler navbar-toggler-link" data-toggle="collapse" href="#sidebarLightCollapse00" role="button"><span class="navbar-text-truncate">Details</span><svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
            <use xlink:href="icons.svg#caret-bottom"></use>
          </svg></a>
        <div class="collapse navbar-collapse" id="sidebarLightCollapse00">
          <ul class="nav navbar-nav" role="tablist">
            <li class="nav-item" data-index="0" ref="tab0"><a class="nav-link active" aria-controls="sidebarLightDetails" data-toggle="tab" href="javascript:;" role="tab"><span class="navbar-text-truncate">elements</span></a></li>
            <li class="nav-item" data-index="1" ref="tab1"><a class="nav-link" aria-controls="sidebarLightDetails" data-toggle="tab" href="javascript:;" role="tab"><span class="navbar-text-truncate">element-sets</span></a></li>
          </ul>
        </div>
      </nav>
      <div class="ddm-sidebar-body">
        <div aria-orientation="vertical" class="ddm-field-types-panel panel-group" id="accordion03" role="tablist">
          <div class="panel panel-secondary"><a href="#ddm-field-types-basic-body" id="ddm-field-types-basic-header" aria-controls="collapseTwo" aria-expanded="true" class="collapse-icon panel-header panel-header-link" data-parent="#accordion03" data-toggle="collapse" role="tab"><span class="panel-title">field-types-basic-elements</span><span class="collapse-icon-closed"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-right">
                  <use xlink:href="icons.svg#angle-right"></use>
                </svg></span><span class="collapse-icon-open"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down">
                  <use xlink:href="icons.svg#angle-down"></use>
                </svg></span></a>
            <div aria-labelledby="#ddm-field-types-basic-header" id="ddm-field-types-basic-body" class="panel-collapse show" role="tabpanel">
              <div class="panel-body p-0 m-0 list-group"></div>
            </div>
          </div>
          <div class="panel panel-secondary"><a href="#ddm-field-types-customized-body" id="ddm-field-types-customized-header" aria-controls="collapseTwo" aria-expanded="true" class="collapse-icon panel-header panel-header-link" data-parent="#accordion03" data-toggle="collapse" role="tab"><span class="panel-title">field-types-customized-elements</span><span class="collapse-icon-closed"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-right">
                  <use xlink:href="icons.svg#angle-right"></use>
                </svg></span><span class="collapse-icon-open"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down">
                  <use xlink:href="icons.svg#angle-down"></use>
                </svg></span></a>
            <div aria-labelledby="#ddm-field-types-customized-header" id="ddm-field-types-customized-body" class="panel-collapse show" role="tabpanel">
              <div class="panel-body p-0 m-0 list-group"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="add-new-page" type="button">add-new-page</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="add-success-page" type="button">add-success-page</button></li>
  </ul>
</div>
`;

exports[`Builder should show modal when trash button gets clicked 1`] = `
<div>
  <div class="container ddm-form-builder">
    <div class="sheet">
      <div class="position-relative">
        <div class="ddm-form-pagination position-absolute">
          <div class="ddm-page-settings" role="group">
            <div class="dropdown dropdown-action"><button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="actions" type="button"><svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#ellipsis-v"></use>
                </svg></button></div>
          </div>
        </div>
        <div class="ddm-layout-builder ddm-page-container-layout">
          <div class="ddm-form-page pl-4 pr-4"><textarea class="form-builder-page-header-title form-control p-0" data-page-index="0" maxlength="120" value="Untitled name" placeholder="untitled-page-x-of-x"></textarea><textarea class="form-builder-page-header-description form-control p-0" data-page-index="0" maxlength="120" placeholder="add-a-short-description-for-this-page"></textarea>
            <div class="form-builder-layout">
              <div class="layout-page">
                <div class="ddm-resize-column" data-resize-column="0" ref="resizeColumn0"></div>
                <div class="ddm-resize-column" data-resize-column="1" ref="resizeColumn1"></div>
                <div class="ddm-resize-column" data-resize-column="2" ref="resizeColumn2"></div>
                <div class="ddm-resize-column" data-resize-column="3" ref="resizeColumn3"></div>
                <div class="ddm-resize-column" data-resize-column="4" ref="resizeColumn4"></div>
                <div class="ddm-resize-column" data-resize-column="5" ref="resizeColumn5"></div>
                <div class="ddm-resize-column" data-resize-column="6" ref="resizeColumn6"></div>
                <div class="ddm-resize-column" data-resize-column="7" ref="resizeColumn7"></div>
                <div class="ddm-resize-column" data-resize-column="8" ref="resizeColumn8"></div>
                <div class="ddm-resize-column" data-resize-column="9" ref="resizeColumn9"></div>
                <div class="ddm-resize-column" data-resize-column="10" ref="resizeColumn10"></div>
                <div class="ddm-resize-column" data-resize-column="11" ref="resizeColumn11"></div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="0" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-3 col-ddm" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                  <div class="col col-empty col-md-9" data-ddm-field-row="0" data-ddm-field-page="0" data-ddm-field-column="1">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="1" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-4 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                  <div class="col-md-6 col-ddm" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="1"></div>
                    </div>
                  </div>
                  <div class="col col-empty col-md-2" data-ddm-field-row="1" data-ddm-field-page="0" data-ddm-field-column="2">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="2" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-12 col-ddm" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="2" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="3" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
                <div class="position-relative row">
                  <div class="col-md-12 col-ddm" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0">
                    <div class="ddm-field-container h-100">
                      <div class="ddm-resize-handle ddm-resize-handle-left" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                      <div class="ddm-drag"></div>
                      <div class="ddm-field-actions-container"><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="paste" type="button"><svg class="lexicon-icon lexicon-icon-paste" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#paste"></use>
                            </svg></button></a><a href="javascript:;"><button class="btn btn-monospaced btn-sm btn-secondary" aria-label="trash" type="button"><svg class="lexicon-icon lexicon-icon-trash" focusable="false" role="presentation">
                              <use xlink:href="icons.svg#trash"></use>
                            </svg></button></a></div>
                      <div class="ddm-resize-handle ddm-resize-handle-right" data-ddm-field-row="3" data-ddm-field-page="0" data-ddm-field-column="0"></div>
                    </div>
                  </div>
                </div>
                <div class="row">
                  <div class="col col-empty col-md-12" data-ddm-field-row="4" data-ddm-field-page="0">
                    <div class="ddm-target"></div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="fade modal d-block show" role="dialog" tabindex="-1">
        <div class="modal-dialog modal-sm">
          <div class="modal-content">
            <div class="modal-header">
              <div class="modal-title">delete-field-dialog-title</div><button class="btn close btn-unstyled" aria-label="close" type="button"><svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg></button>
            </div>
            <div class="modal-body">are-you-sure-you-want-to-delete-this-field</div>
            <div class="modal-footer">
              <div class="modal-item-first">
                <div class="btn-group"></div>
              </div>
              <div class="modal-item-last">
                <div class="btn-group">
                  <div class="btn-group-item"><button class="btn close-modal btn-secondary" type="button">dismiss</button></div>
                  <div class="btn-group-item"><button class="btn btn-primary" type="button">delete</button></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="fade modal" role="dialog" tabindex="-1">
        <div class="modal-dialog modal-sm">
          <div class="modal-content">
            <div class="modal-header">
              <div class="modal-title">cancel-field-changes-question</div><button class="btn close btn-unstyled" aria-label="close" type="button"><svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg></button>
            </div>
            <div class="modal-body">are-you-sure-you-want-to-cancel</div>
            <div class="modal-footer">
              <div class="modal-item-first">
                <div class="btn-group"></div>
              </div>
              <div class="modal-item-last">
                <div class="btn-group">
                  <div class="btn-group-item"><button class="btn close-modal btn-secondary" type="button">dismiss</button></div>
                  <div class="btn-group-item"><button class="btn btn-primary" type="button">yes-cancel</button></div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="sidebar-container" ref="container">
    <div class="sidebar sidebar-light">
      <nav class="component-tbar tbar">
        <div class="container-fluid">
          <ul class="tbar-nav">
            <li class="tbar-item tbar-item-expand text-left">
              <div class="tbar-section"><span class="text-truncate-inline"><span class="text-truncate">add-elements</span></span></div>
            </li>
            <li class="tbar-item"><a class="component-action sidebar-close" href="#1" ref="closeButton" role="button"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-times">
                  <use xlink:href="icons.svg#times"></use>
                </svg></a></li>
          </ul>
        </div>
      </nav>
      <nav class="component-navigation-bar navbar navigation-bar navbar-collapse-absolute navbar-expand-md navbar-underline"><a aria-controls="sidebarLightCollapse00" aria-expanded="false" aria-label="Toggle Navigation" class="collapsed navbar-toggler navbar-toggler-link" data-toggle="collapse" href="#sidebarLightCollapse00" role="button"><span class="navbar-text-truncate">Details</span><svg aria-hidden="true" class="lexicon-icon lexicon-icon-caret-bottom">
            <use xlink:href="icons.svg#caret-bottom"></use>
          </svg></a>
        <div class="collapse navbar-collapse" id="sidebarLightCollapse00">
          <ul class="nav navbar-nav" role="tablist">
            <li class="nav-item" data-index="0" ref="tab0"><a class="nav-link active" aria-controls="sidebarLightDetails" data-toggle="tab" href="javascript:;" role="tab"><span class="navbar-text-truncate">elements</span></a></li>
            <li class="nav-item" data-index="1" ref="tab1"><a class="nav-link" aria-controls="sidebarLightDetails" data-toggle="tab" href="javascript:;" role="tab"><span class="navbar-text-truncate">element-sets</span></a></li>
          </ul>
        </div>
      </nav>
      <div class="ddm-sidebar-body">
        <div aria-orientation="vertical" class="ddm-field-types-panel panel-group" id="accordion03" role="tablist">
          <div class="panel panel-secondary"><a href="#ddm-field-types-basic-body" id="ddm-field-types-basic-header" aria-controls="collapseTwo" aria-expanded="true" class="collapse-icon panel-header panel-header-link" data-parent="#accordion03" data-toggle="collapse" role="tab"><span class="panel-title">field-types-basic-elements</span><span class="collapse-icon-closed"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-right">
                  <use xlink:href="icons.svg#angle-right"></use>
                </svg></span><span class="collapse-icon-open"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down">
                  <use xlink:href="icons.svg#angle-down"></use>
                </svg></span></a>
            <div aria-labelledby="#ddm-field-types-basic-header" id="ddm-field-types-basic-body" class="panel-collapse show" role="tabpanel">
              <div class="panel-body p-0 m-0 list-group"></div>
            </div>
          </div>
          <div class="panel panel-secondary"><a href="#ddm-field-types-customized-body" id="ddm-field-types-customized-header" aria-controls="collapseTwo" aria-expanded="true" class="collapse-icon panel-header panel-header-link" data-parent="#accordion03" data-toggle="collapse" role="tab"><span class="panel-title">field-types-customized-elements</span><span class="collapse-icon-closed"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-right">
                  <use xlink:href="icons.svg#angle-right"></use>
                </svg></span><span class="collapse-icon-open"><svg aria-hidden="true" class="lexicon-icon lexicon-icon-angle-down">
                  <use xlink:href="icons.svg#angle-down"></use>
                </svg></span></a>
            <div aria-labelledby="#ddm-field-types-customized-header" id="ddm-field-types-customized-body" class="panel-collapse show" role="tabpanel">
              <div class="panel-body p-0 m-0 list-group"></div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="add-new-page" type="button">add-new-page</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="reset-page" type="button">reset-page</button></li>
    <li tabindex="-1"><button class="btn dropdown-item btn-sm btn-link" aria-label="add-success-page" type="button">add-success-page</button></li>
  </ul>
</div>
`;
